Grammar/Generated_Code/DSL_Data_Formulas_Visualization_GrammarParser.py
# Generated from D:/Programming/Projects/DSL/DSL_Data_Formulas_Visualization/Grammar/DSL_Data_Formulas_Visualization_Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DSL_Data_Formulas_Visualization_GrammarParser ( Parser ):

    grammarFileName = "DSL_Data_Formulas_Visualization_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Data'", "'dataset'", "'name'", "'if'", 
                     "'else'", "'range'", "'while'", "'Formula'", "'ReadFrom'", 
                     "'ExportToFile'", "'ExportToImage'", "'VisualFormula'", 
                     "'VisualData'", "'graph'", "'bar'", "'pie'", "'hist'", 
                     "'png'", "'jpg'", "'csv'", "'txt'", "'json'", "'excel'", 
                     "'console'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "':'", "','", "'('", 
                     "')'", "'='", "'['", "']'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "<INVALID>", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'{'", "'}'", "'<EOF>'" ]

    symbolicNames = [ "<INVALID>", "DATA", "DATASET", "NAME", "IF", "ELSE", 
                      "RANGE", "WHILE", "FORMULA_T", "READ_FROM", "EXPORT_TO_FILE", 
                      "EXPORT_TO_IMAGE", "VISUAL_FORMULA", "VISUAL_DATA", 
                      "GRAPH", "BAR", "PIE", "HIST", "PNG", "JPG", "CSV", 
                      "TEXT", "JSON", "EXCEL", "CONSOLE", "OPERATORS", "ID", 
                      "PATH", "COMMENT_BLOCK", "COMMENT_LINE", "SEMICOLON", 
                      "COLON", "COMMA", "LPAREN", "RPAREN", "ASSIGN", "LBRACKET", 
                      "RBRACKET", "DIGIT", "INTEGER", "FLOAT", "DOT", "WS", 
                      "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "GREATER_EQUAL", 
                      "LESS_EQUAL", "LBRACE", "RBRACE", "EOF_TOKEN" ]

    RULE_program = 0
    RULE_commandsList = 1
    RULE_command = 2
    RULE_comment = 3
    RULE_readCommand = 4
    RULE_readFromFile = 5
    RULE_exportCommand = 6
    RULE_exportToFile = 7
    RULE_exportToImage = 8
    RULE_visualizeCommand = 9
    RULE_visualizeFormula = 10
    RULE_visualizeData = 11
    RULE_visualizationType = 12
    RULE_plotType = 13
    RULE_fileType = 14
    RULE_imageType = 15
    RULE_formulaContent = 16
    RULE_primaryExpression = 17
    RULE_ifStatement = 18
    RULE_whileStatement = 19
    RULE_condition = 20
    RULE_expression = 21

    ruleNames =  [ "program", "commandsList", "command", "comment", "readCommand", 
                   "readFromFile", "exportCommand", "exportToFile", "exportToImage", 
                   "visualizeCommand", "visualizeFormula", "visualizeData", 
                   "visualizationType", "plotType", "fileType", "imageType", 
                   "formulaContent", "primaryExpression", "ifStatement", 
                   "whileStatement", "condition", "expression" ]

    EOF = Token.EOF
    DATA=1
    DATASET=2
    NAME=3
    IF=4
    ELSE=5
    RANGE=6
    WHILE=7
    FORMULA_T=8
    READ_FROM=9
    EXPORT_TO_FILE=10
    EXPORT_TO_IMAGE=11
    VISUAL_FORMULA=12
    VISUAL_DATA=13
    GRAPH=14
    BAR=15
    PIE=16
    HIST=17
    PNG=18
    JPG=19
    CSV=20
    TEXT=21
    JSON=22
    EXCEL=23
    CONSOLE=24
    OPERATORS=25
    ID=26
    PATH=27
    COMMENT_BLOCK=28
    COMMENT_LINE=29
    SEMICOLON=30
    COLON=31
    COMMA=32
    LPAREN=33
    RPAREN=34
    ASSIGN=35
    LBRACKET=36
    RBRACKET=37
    DIGIT=38
    INTEGER=39
    FLOAT=40
    DOT=41
    WS=42
    EQUAL=43
    NOT_EQUAL=44
    GREATER=45
    LESS=46
    GREATER_EQUAL=47
    LESS_EQUAL=48
    LBRACE=49
    RBRACE=50
    EOF_TOKEN=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commandsList(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.CommandsListContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.commandsList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_Data_Formulas_Visualization_GrammarParser.CommandContext)
            else:
                return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.CommandContext,i)


        def ifStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_Data_Formulas_Visualization_GrammarParser.IfStatementContext)
            else:
                return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.IfStatementContext,i)


        def whileStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_Data_Formulas_Visualization_GrammarParser.WhileStatementContext)
            else:
                return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.WhileStatementContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSL_Data_Formulas_Visualization_GrammarParser.CommentContext)
            else:
                return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.CommentContext,i)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_commandsList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommandsList" ):
                listener.enterCommandsList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommandsList" ):
                listener.exitCommandsList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommandsList" ):
                return visitor.visitCommandsList(self)
            else:
                return visitor.visitChildren(self)




    def commandsList(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.CommandsListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commandsList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 8, 10, 11, 12, 13]:
                    self.state = 46
                    self.command()
                    pass
                elif token in [4]:
                    self.state = 47
                    self.ifStatement()
                    pass
                elif token in [7]:
                    self.state = 48
                    self.whileStatement()
                    pass
                elif token in [28, 29]:
                    self.state = 49
                    self.comment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 805322130) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def readCommand(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ReadCommandContext,0)


        def SEMICOLON(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.SEMICOLON, 0)

        def exportCommand(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ExportCommandContext,0)


        def visualizeCommand(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.VisualizeCommandContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.readCommand()
                self.state = 55
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.SEMICOLON)
                pass
            elif token in [10, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.exportCommand()
                self.state = 58
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.SEMICOLON)
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.visualizeCommand()
                self.state = 61
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT_BLOCK(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.COMMENT_BLOCK, 0)

        def COMMENT_LINE(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.COMMENT_LINE, 0)

        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==28 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.DATA, 0)

        def ID(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN, 0)

        def readFromFile(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ReadFromFileContext,0)


        def FORMULA_T(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.FORMULA_T, 0)

        def formulaContent(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.FormulaContentContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_readCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadCommand" ):
                listener.enterReadCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadCommand" ):
                listener.exitReadCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadCommand" ):
                return visitor.visitReadCommand(self)
            else:
                return visitor.visitChildren(self)




    def readCommand(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ReadCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_readCommand)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.DATA)
                self.state = 68
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
                self.state = 69
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
                self.state = 70
                self.readFromFile()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.FORMULA_T)
                self.state = 72
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
                self.state = 73
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
                self.state = 74
                self.formulaContent()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadFromFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ_FROM(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.READ_FROM, 0)

        def LPAREN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN, 0)

        def PATH(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.PATH, 0)

        def RPAREN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN, 0)

        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_readFromFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadFromFile" ):
                listener.enterReadFromFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadFromFile" ):
                listener.exitReadFromFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadFromFile" ):
                return visitor.visitReadFromFile(self)
            else:
                return visitor.visitChildren(self)




    def readFromFile(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ReadFromFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_readFromFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.READ_FROM)
            self.state = 78
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            self.state = 79
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.PATH)
            self.state = 80
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPORT_TO_FILE(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.EXPORT_TO_FILE, 0)

        def LPAREN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN, 0)

        def PATH(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.PATH, 0)

        def RPAREN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN, 0)

        def exportToFile(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ExportToFileContext,0)


        def EXPORT_TO_IMAGE(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.EXPORT_TO_IMAGE, 0)

        def exportToImage(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ExportToImageContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_exportCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExportCommand" ):
                listener.enterExportCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExportCommand" ):
                listener.exitExportCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportCommand" ):
                return visitor.visitExportCommand(self)
            else:
                return visitor.visitChildren(self)




    def exportCommand(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ExportCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exportCommand)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.EXPORT_TO_FILE)
                self.state = 83
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
                self.state = 84
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.PATH)
                self.state = 85
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
                self.state = 86
                self.exportToFile()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.EXPORT_TO_IMAGE)
                self.state = 88
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
                self.state = 89
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.PATH)
                self.state = 90
                self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
                self.state = 91
                self.exportToImage()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportToFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATASET(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.DATASET, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ID, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN, i)

        def NAME(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.NAME, 0)

        def DOT(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.DOT, 0)

        def fileType(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.FileTypeContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_exportToFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExportToFile" ):
                listener.enterExportToFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExportToFile" ):
                listener.exitExportToFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportToFile" ):
                return visitor.visitExportToFile(self)
            else:
                return visitor.visitChildren(self)




    def exportToFile(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ExportToFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exportToFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.DATASET)
            self.state = 95
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
            self.state = 96
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            self.state = 97
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            self.state = 98
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
            self.state = 99
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.NAME)
            self.state = 100
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
            self.state = 101
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            self.state = 102
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            self.state = 103
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.DOT)
            self.state = 104
            self.fileType()
            self.state = 105
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportToImageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plotType(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.PlotTypeContext,0)


        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ID, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
            else:
                return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN, i)

        def NAME(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN, 0)

        def DOT(self):
            return self.getToken(DSL_Data_Formulas_Visualization_GrammarParser.DOT, 0)

        def imageType(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.ImageTypeContext,0)


        def getRuleIndex(self):
            return DSL_Data_Formulas_Visualization_GrammarParser.RULE_exportToImage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExportToImage" ):
                listener.enterExportToImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExportToImage" ):
                listener.exitExportToImage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportToImage" ):
                return visitor.visitExportToImage(self)
            else:
                return visitor.visitChildren(self)




    def exportToImage(self):

        localctx = DSL_Data_Formulas_Visualization_GrammarParser.ExportToImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exportToImage)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.plotType()
            self.state = 108
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            self.state = 109
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            self.state = 110
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
            self.state = 111
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.NAME)
            self.state = 112
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ASSIGN)
            self.state = 113
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.LPAREN)
            self.state = 114
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.ID)
            self.state = 115
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.DOT)
            self.state = 116
            self.imageType()
            self.state = 117
            self.match(DSL_Data_Formulas_Visualization_GrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VisualizeCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def visualizeFormula(self):
            return self.getTypedRuleContext(DSL_Data_Formulas_Visualization_GrammarParser.VisualizeFormulaContext,0)

